# rust-toolchain-file

./: .gitignore  Cargo.toml  deny.toml  release.toml  run_coverage.sh
.github/: dependabot.yml
.github/workflows/: coverage.yml  fmt.yml  licenses_and_advisories.yml  linter.yml  msrv.yml  test.yml
src/: legacy.rs  lib.rs  tests.rs  toml.rs
src/legacy/: tests.rs
src/toml/: tests.rs
tests/fixtures/rustup-book-local-toolchain/: rust-toolchain.toml
